--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
         <section id="about-section" class="row position-relative">
             <div class="logo">
-                <img src="/assets/images/logos/logo AI Los Pinos.png" alt="Logo los pinos" data-aos="fade-in">
+                <img src="/assets/images/logos/12-2022_Los_Pinos_Logo_alt.png" alt="Logo los pinos" data-aos="fade-in">
             </div>
 
             <div class="about-content" data-aos="fade-in">
