--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
 </head>
 
 <body>
+
+
     <main class="w-100 m-0 p-0 position-relative index overflow-hidden">
+        <div class="loading-splash">
+            <div class="loading-icon-wrapper">
+
+                <img src="/assets/images/logos/12-2022_Los_Pinos_Logo.jpg" alt="" class="loading-icon">
+            </div>
+        </div>
         <!-- HEADER -->
         <header id="header-section" class="row position-relative header">
             <!-- NAV -->
