--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -28,6 +28,12 @@
 
 <body>
     <main class="container-fluid m-0 p-0 reserve">
+        <div class="loading-splash">
+            <div class="loading-icon-wrapper">
+
+                <img src="/assets/images/logos/12-2022_Los_Pinos_Logo.jpg" alt="" class="loading-icon">
+            </div>
+        </div>
         <header id="header-section" class="row position-relative header">
             <!-- NAV -->
             <nav class="default-nav">
