--- a/pages/room_rates.html
+++ b/pages/room_rates.html
@@ -28,7 +28,12 @@
 
 <body>
     <main class="container-fluid p-0 room-rates mb-92 overflow-hidden">
+        <div class="loading-splash">
+            <div class="loading-icon-wrapper">
 
+                <img src="/assets/images/logos/12-2022_Los_Pinos_Logo.jpg" alt="" class="loading-icon">
+            </div>
+        </div>
         <!-- HEADER -->
         <header id="header-section" class="row position-relative header">
             <!-- NAV -->
