--- a/pages/activities.html
+++ b/pages/activities.html
@@ -205,21 +205,21 @@
 
                     <div class="d-flex gap-3">
                         <div class="d-flex flex-column align-items-center">
-                            <i class="icon-canopy"></i>
+                            <i role="img" aria-label="Canopy tour" class="icon-canopy"></i>
                             <p class="text-uppercase fw-bold fs-xx-small lh-sm" data-aos="fade-down">Canopy<br>Tour</p>
                         </div>
                         <div class="d-flex flex-column align-items-center">
-                            <i class="icon-bungee"></i>
+                            <i role="img" class="icon-bungee" aria-label="Bungee Jumping"></i>
                             <p class="text-uppercase fw-bold fs-xx-small lh-sm" data-aos="fade-down">Bungee<br>jumping
                             </p>
                         </div>
                         <div class="d-flex flex-column align-items-center">
-                            <i class="icon-canoying"></i>
+                            <i role="img" class="icon-canoying" aria-label="Canoying Tour"></i>
                             <p class="text-uppercase fw-bold fs-xx-small lh-sm" data-aos="fade-down">Canoying<br>tour
                             </p>
                         </div>
                         <div class="d-flex flex-column align-items-center">
-                            <i class="icon-horseback"></i>
+                            <i role="img" class="icon-horseback" aria-label="Horseback Ridding Tour"></i>
                             <p class="text-uppercase fw-bold fs-xx-small lh-sm" data-aos="fade-down">
                                 Horseback<br>Ridding
                                 Tour</p>
@@ -274,15 +274,15 @@
 
                     <div class="d-flex gap-3">
                         <div class="d-flex flex-column align-items-center">
-                            <i class="icon-hiking-alt"></i>
+                            <i role="img" aria-label="Hiking Tour" class="icon-hiking-alt"></i>
                             <p class="text-uppercase fw-bold fs-xx-small lh-sm" data-aos="fade-down">Hiking tour</p>
                         </div>
                         <div class="d-flex flex-column align-items-center">
-                            <i class="icon-birdwatching"></i>
+                            <i role="img" aria-label="Birdwatching" class="icon-birdwatching"></i>
                             <p class="text-uppercase fw-bold fs-xx-small lh-sm" data-aos="fade-down">Birdwatching</p>
                         </div>
                         <div class="d-flex flex-column align-items-center">
-                            <i class="icon-hanging"></i>
+                            <i role="img" aria-label="Hanging bridges Tour" class="icon-hanging"></i>
                             <p class="text-uppercase fw-bold fs-xx-small lh-sm" data-aos="fade-down">Hanging Bridges
                                 <br> Tour
                             </p>
@@ -331,11 +331,11 @@
 
                     <div class="d-flex gap-3">
                         <div class="d-flex flex-column align-items-center">
-                            <i class="icon-coffee"></i>
+                            <i role="img" aria-label="Coffee Tour" class="icon-coffee"></i>
                             <p class="text-uppercase fw-bold fs-xx-small lh-sm" data-aos="fade-down">Coffee tour</p>
                         </div>
                         <div class="d-flex flex-column align-items-center">
-                            <i class="icon-cheese"></i>
+                            <i role="img" aria-label="Cheese Factory" class="icon-cheese"></i>
                             <p class="text-uppercase fw-bold fs-xx-small lh-sm" data-aos="fade-down">Cheese factory <br>
                                 tour</p>
                         </div>
@@ -381,11 +381,11 @@
 
                     <div class="d-flex gap-3">
                         <div class="d-flex flex-column align-items-center">
-                            <i class="icon-gallery"></i>
+                            <i role="img" aria-label="Art Gallery" class="icon-gallery"></i>
                             <p class="text-uppercase fw-bold fs-xx-small lh-sm" data-aos="fade-down">Art galleries</p>
                         </div>
                         <div class="d-flex flex-column align-items-center">
-                            <i class="icon-painting"></i>
+                            <i role="img" aria-label="Painters" class="icon-painting"></i>
                             <p class="text-uppercase fw-bold fs-xx-small lh-sm" data-aos="fade-down">Painters</p>
                         </div>
                     </div>
@@ -432,12 +432,12 @@
 
                     <div class="d-flex gap-3">
                         <div class="d-flex flex-column align-items-center">
-                            <i class="icon-gondola"></i>
+                            <i role="img" aria-label="Gondola Paronamic Views" class="icon-gondola"></i>
                             <p class="text-uppercase fw-bold fs-xx-small lh-sm" data-aos="fade-down">Gondola <br>
                                 Paronamic views</p>
                         </div>
                         <div class="d-flex flex-column align-items-center">
-                            <i class="icon-trails"></i>
+                            <i role="img" aria-label="Trails" class="icon-trails"></i>
                             <p class="text-uppercase fw-bold fs-xx-small lh-sm" data-aos="fade-down">Trails</p>
                         </div>
 
