--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
     <main class="w-100 m-0 p-0 position-relative index overflow-hidden">
-        <div class="loading-splash">
+        <div class="loading-splash" role="dialog" aria-label="Loading">
             <div class="loading-icon-wrapper">
 
                 <img src="/assets/images/logos/12-2022_Los_Pinos_Logo.jpg" alt="" class="loading-icon">
