Splash accesibility corrections

--- a/pages/activities.html
+++ b/pages/activities.html
@@ -28,7 +28,7 @@
 
 <body>
     <main class="container-fluid activities p-0 overflow-hidden">
-        <div class="loading-splash">
+        <div class="loading-splash" role="dialog" aria-label="Loading">
             <div class="loading-icon-wrapper">
 
                 <img src="/assets/images/logos/12-2022_Los_Pinos_Logo.jpg" alt="" class="loading-icon">
